--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
